# bos

./: .chat-sessions.json  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT_CHECKLIST.md  EXECUTIVE_SUMMARY.md  LICENSE  ONBOARDING.md  PERFORMANCE_OPTIMIZATION_REPORT.md  PERFORMANCE_TESTING.md  PLAN-B.md  PLAN_A_RELEASE.md  PROJECT_COMPLETION.md  README-ZH.md  README.md  baseline_message_serialization.txt  baseline_streaming.txt  baseline_tool_registry.txt  debug.txt  perf_results_quick.txt  performance_comparison.sh  test_http.sh  test_reqwest.rs
benches/agent/: Cargo.toml
benches/agent/benches/: llm_client.rs  rpc_payload.rs  streaming.rs  tool_registry.rs
benches/bus/: Cargo.toml
benches/bus/benches/: message_serialization.rs  zenoh_pubsub.rs
crates/agent/: .gitignore  Cargo.toml
crates/agent/examples/: README.md  agent_rpc_demo.rs  basic_usage.rs  demo_hooks_and_plugins.rs  session_save_restore.rs  session_storage_save_restore.rs  with_resilience.rs
crates/agent/src/: bus_rpc.rs  error.rs  lib.rs  metrics.rs  prelude.rs
crates/agent/tests/: agent_hooks.rs  agent_integration_test.rs  agent_serialization.rs  agentic_mode_test.rs  http_transport_test.rs  tool_policy_integration.rs
crates/bus/: Cargo.toml
crates/bus/src/: callable.rs  caller.rs  codec.rs  error.rs  lib.rs  publisher.rs  query.rs  queryable.rs  session.rs  subscriber.rs
crates/bus/tests/: integration.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/config/: Cargo.toml
crates/config/src/: error.rs  lib.rs  loader.rs  types.rs
crates/config/tests/: load_sync_toml.rs
crates/jsbos/: Cargo.toml  README.md  brainos-api-runner.js  brainos.d.ts  brainos.js  demo-agent-hooks.js  demo-brainos-hooks.js  demo-hooks.js  demo-plugins.js  index.d.ts  index.js  index.mjs  jsbos.d.ts  jsbos.js  package-lock.json  package.json  test.js  tsconfig.json
crates/jsbos/agent/: index.d.ts  index.js
crates/jsbos/bus/: index.d.ts  index.js
crates/jsbos/config/: loader.d.ts  loader.js
crates/jsbos/examples/: agent_demo.cjs  agent_demo.js  agent_mcp_demo.cjs  agent_mcp_demo.js  agent_metrics_demo.js  agent_resilience_demo.cjs  agent_resilience_demo.js  agent_rpc_demo.cjs  agent_rpc_demo.js  agent_skill_demo.cjs  agent_skill_demo.js  agent_stream_demo.cjs  agent_stream_demo.js  agent_tool_boundary_demo.cjs  agent_tool_boundary_demo.js  async_hooks_plugins_demo.js  async_tool_demo.js  brainos_demo.cjs  brainos_demo.js  bus_demo.cjs  bus_demo.js  bus_manager_demo.cjs  bus_manager_demo.js  call_demo.cjs  call_demo.js  caller_demo.cjs  caller_demo.js  config_demo.cjs  config_demo.js  demo-agent-hooks.js  demo-brainos-hooks.js  demo-hooks.js  demo-plugins.js  demo-stream-hooks-plugins.js  demo_audio.js  demo_content_api.js  demo_multimodal.js  elegant-api-examples.js  integration_demo.cjs  integration_demo.js  (+18 more)
crates/jsbos/scripts/: generate-dts.js
crates/jsbos/src/: agent.rs  bus.rs  caller.rs  config.rs  hooks.rs  jsany.rs  lib.rs  llm_usage.rs  llm_usage.ts  mcp.rs  perf.rs  plugin.rs  publisher.rs  query.rs  subscriber.rs  utils.rs
crates/jsbos/test/: brainos-api.test.js  llm_usage.test.js  loader.test.js
crates/logging/: Cargo.toml
crates/logging/src/: lib.rs
crates/logging/tests/: integration.rs
crates/nbos/: Cargo.toml  README.md  pyproject.toml
crates/nbos/brainos/: __init__.py  caller.py  config.py  core.py  query.py
crates/nbos/examples/: 01_quickstart.py  02_multi_tool.py  03_conversation.py  03_three_modes.py  04_resilience.py  async_test.py  async_tool_test.py  demo_all_in_one.py  demo_multimodal.py  minimal_async_test.py  simple_async_test.py
crates/nbos/nbos/: __init__.py  bus.py  caller.py  config.py  content.py  core.py  query.py
crates/nbos/src/: agent.rs  caller.rs  config.rs  hooks.rs  lib.rs  llm_usage.rs  plugin.rs  publisher.rs  query.rs  utils.rs
crates/nbos/tests/: README.md  test_agent.py  test_agent_stream.py  test_async_support.py  test_brainos_api.py  test_bus.py  test_caller_callable.py  test_config_loader.py  test_integration.py  test_llm_usage.py  test_logging.py  test_publisher_subscriber.py  test_query_queryable.py  test_query_stream.py  test_queryable_callable_run.py  test_queryable_stream.py  test_subscriber_run.py
crates/pybos/: Cargo.toml  README.md  demo_hooks.py  demo_plugins.py  pyproject.toml  test_features.py
crates/pybos/.cargo/: config.toml
crates/pybos/brainos/: __init__.py  bus.py  caller.py  core.py  tool.py
crates/pybos/examples/: 01_quickstart.py  02_multi_tool.py  03_conversation.py  03_three_modes.py  04_resilience.py  a.txt  demo_all_in_one.py
crates/pybos/src/: agent.rs  bus.rs  caller.rs  hooks.rs  lib.rs  llm_usage.rs  logging.rs  mcp.rs  plugin.rs  publisher.rs  query.rs  subscriber.rs  utils.rs
crates/pybos/tests/: README.md  __init__.py  test_agent.py  test_agent_stream.py  test_bus.py  test_caller_callable.py  test_config_loader.py  test_integration.py  test_llm_usage.py  test_logging.py  test_publisher_subscriber.py  test_query_queryable.py  test_query_stream.py  test_queryable_callable_run.py  test_queryable_stream.py  test_subscriber_run.py
crates/pybrainos/: Cargo.toml  README.md  pyproject.toml
crates/pybrainos/brainos/: __init__.py  bus.py  config.py  core.py  query.py
crates/pybrainos/examples/: 04_resilience.py  demo_all_in_one.py
crates/pybrainos/src/: lib.rs  llm_usage.rs  plugin.rs
crates/pybrainos/tests/: README.md  test_agent.py  test_agent_stream.py  test_config_loader.py  test_llm_usage.py  test_query_queryable.py  (+3 more)
crates/qserde/: Cargo.toml
crates/qserde_derive/: Cargo.toml
crates/react/: Cargo.toml  README.md
crates/serde_derive/: Cargo.toml
examples/basic-communication/: Cargo.toml  README.md
examples/brainos-common/: Cargo.toml
examples/demo-agent-lifecycle/: Cargo.toml
examples/demo-discovery/: Cargo.toml
examples/demo-skills-mcp/: Cargo.toml
examples/demo-streaming/: Cargo.toml
examples/llm-agent-demo/: Cargo.toml  README.md
examples/unified-tool-demo/: Cargo.toml
examples/wechat-demo/: Cargo.toml  README.md
(+388 files in other folders)
