[workspace]
members = [
    "crates/config",
    "crates/bus",
    "crates/agent",
    "crates/logging",
    "crates/react",
    "crates/pybos",
    "crates/jsbos",
    "crates/qserde",
    "crates/qserde_derive"
, "examples/aicoder/quick_sort"]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
serde_yaml = "0.9"
dashmap = "6.1.0"
anyhow = "1.0"
thiserror = "2.0"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.0", features = ["v4"] }
futures = "0.3"
tokio-stream = "0.1"
async-stream = "0.3"
chrono = { version = "0.4", features = ["serde"] }
fastrand = "2.0"
reqwest = { version = "0.12", features = ["json"] }
zenoh = "1.8"
regex = "1.12"
glob = "0.3"
urlencoding = "2.1"
rkyv = { version = "0.8", features = ["unaligned"] }
rkyv_derive = "0.8"
async-channel = "2.5"
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
pprof = { version = "0.13", features = ["criterion", "flamegraph"] }

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["BrickOS Team"]
license = "MIT OR Apache-2.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.bench]
inherits = "release"
debug = true
