[package]
name = "agent"
version = "0.1.0"
edition = "2021"

[dependencies]
bus = { path = "../bus" }
config = { path = "../config" }
logging = { path = "../logging"}
log = "0.4.29"
tokio = { workspace = true, features = ["full"] }
reqwest = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
zenoh = { workspace = true }
tokio-stream = { workspace = true }
react = { path = "../react" }
async-stream = { workspace = true }
toml = { workspace = true }
serde_yaml = { workspace = true }
dashmap = {workspace = true}
flate2 = "1.0"
tempfile = "3.8"
anyhow = { workspace = true }
ctor = "0.6.3"

[features]
internal-api = []
