[package]
name = "agent"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "AI agent framework with LLM integration, tools, skills, and MCP"
documentation = "https://github.com/open1s/bos#readme"
homepage = "https://github.com/open1s/bos"
repository = "https://github.com/open1s/bos"

[dependencies]
bus = { path = "../bus" }
config = { path = "../config" }
logging = { path = "../logging" }
log = "0.4.29"
tokio = { workspace = true, features = ["full"] }
reqwest = { workspace = true }
ureq = "3.3"
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
zenoh = { workspace = true }
tokio-stream = { workspace = true }
react = { path = "../react" }
qserde = { path = "../qserde" }
uuid = { workspace = true }
async-stream = { workspace = true }
toml = { workspace = true }
serde_yaml = { workspace = true }
dashmap = { workspace = true }
flate2 = "1.0"
tempfile = "3.8"
ctor = "1.0.1"
dirs = "6.0.0"

[dev-dependencies]
ureq = "3.3"

[features]
internal-api = []

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"

[[example]]
name = "with_resilience"
path = "examples/with_resilience.rs"
