[package]
name = "config"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "BrainOS configuration library"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "1.1"
serde_yaml = "0.9.33"
anyhow = { version = "1.0" }
thiserror = "1.0"
tokio = { version = "1.50", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4.29"
shellexpand = "3.1"

[dev-dependencies]
tempfile = "3.0"

[lib]
name = "config"
path = "src/lib.rs"
