[package]
name = "jsbos"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "JavaScript/Node.js bindings for BrainOS (agent/config/bus) via NAPI-RS"

[package.metadata]
napi = { binaryName = "jsbos" }

[lib]
crate-type = ["cdylib"]

[dependencies]
agent = { path = "../agent" }
bus = { path = "../bus" }
config = { path = "../config" }
logging = { path = "../logging" }
react = { path = "../react" }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
napi = { version = "3", features = ["async", "serde-json", "tokio_rt"] }
napi-derive = "3"
async-trait = "0.1"
futures = { workspace = true }
uuid = { workspace = true }

[build-dependencies]
napi-build = "2"