[package]
name = "logging"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Tracing and observability for BrainOS"
documentation = "https://github.com/open1s/bos#readme"
homepage = "https://github.com/open1s/bos"
repository = "https://github.com/open1s/bos"

[dependencies]
ctor = "0.6.3"
log = "0.4.29"
flexi_logger = "0.31.8"
serde_json = "1.0.149"
dirs = "6.0.0"
config = { path = "../config" }
