[package]
name = "nbos"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Python bindings for BrainOS (agent/config/bus)"
documentation = "https://github.com/open1s/bos/blob/main/docs/python-user-guide.md"
homepage = "https://github.com/open1s/bos"
repository = "https://github.com/open1s/bos"

[lib]
name = "nbos"
crate-type = ["cdylib"]

[dev-dependencies]
maturin = "1.8.7"

[dependencies]
agent = { path = "../agent" }
bus = { path = "../bus" }
config = { path = "../config" }
logging = { path = "../logging" }
react = { path = "../react" }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
pyo3 = { version = "0.28", features = ["extension-module", "serde"] }
pyo3-async-runtimes = { version = "0.28", features = ["tokio-runtime"] }
async-trait = "0.1"
futures = { workspace = true }
uuid = { workspace = true }
