[package]
name = "pybos"
version = "0.1.0"
edition = "2021"
description = "Python bindings for BrainOS (agent/config/bus)"

[lib]
name = "pybos"
crate-type = ["cdylib"]

[dev-dependencies]
maturin = "1.8.7"

[dependencies]
agent = { path = "../agent" }
bus = { path = "../bus" }
config = { path = "../config" }
logging = { path = "../logging" }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
pyo3 = { version = "0.28", features = ["extension-module", "abi3-py39", "serde"] }
pyo3-async-runtimes = { version = "0.28", features = ["tokio-runtime"] }
async-trait = "0.1"
futures = { workspace = true }
