[package]
name = "qserde"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Multi-backend serialization for Rust types"

[dependencies]
rkyv = { workspace = true, optional = true }
thiserror = { workspace = true }
qserde_derive = { path = "../qserde_derive" }
# Serialization backends
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
bincode = { version = "2.0", optional = true }
ciborium = { version = "0.2", optional = true }
postcard = { version = "1.0", optional = true }

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["std", "rkyv-backend"]
std = []
alloc = []
# Backend features
rkyv-backend = ["rkyv"]
serde-backend = ["serde", "serde_json"]
bincode-backend = ["bincode"]
cbor-backend = ["serde", "ciborium"]
postcard-backend = ["postcard"]
# Convenience features
all-backends = [
    "rkyv-backend",
    "serde-backend",
    "bincode-backend",
    "cbor-backend",
    "postcard-backend"
]

[lib]
name = "qserde"
path = "src/lib.rs"
