[package]
name = "react"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "ReAct-inspired reasoning and acting engine in Rust"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "1.0"
log = "0.4"
env_logger = "0.9"
futures = "0.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
async-trait = "0.1"
reqwest = { version = "0.13", features = ["json", "stream"] }
tokio-stream = "0.1"
dashmap = {workspace = true}
uuid = {workspace = true}
qserde = { path = "../qserde" }
surfing = "0.1"
quick-xml = "0.39"

[dev-dependencies]
config = { path = "../config" }
