[package]
name = "serde_derive"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Derive helpers for the BOS serde crate"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
