[package]
name = "basic-communication"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "agent1"
path = "src/bin/agent1.rs"

[[bin]]
name = "agent2"
path = "src/bin/agent2.rs"

[dependencies]
agent = { path = "../../crates/agent" }
bus = { path = "../../crates/bus" }
brainos-common = { path = "../brainos-common" }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
fastrand = "2.0"