[package]
name = "brainos-common"
version = "0.1.0"
edition = "2021"

[dependencies]
agent = { path = "../../crates/agent" }
bus = { path = "../../crates/bus" }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
async-trait = "0.1"
anyhow = "1.0"
zenoh = { workspace = true }
futures = { workspace = true }
tokio-stream = { workspace = true }
serde_json = { workspace = true }
