[package]
name = "demo-agent-lifecycle"
version = "0.1.0"
edition = "2021"

[dependencies]
bus = { path = "../../crates/bus" }
agent = { path = "../../crates/agent" }
brainos-common = { path = "../brainos-common" }
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
