[package]
name = "demo-discovery"
version = "0.1.0"
edition = "2021"

[dependencies]
agent = { path = "../../crates/agent" }
bus = { path = "../../crates/bus" }
brainos-common = { path = "../brainos-common" }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
rkyv = { workspace = true }
rkyv_derive = { workspace = true }
