[package]
name = "demo-skills-mcp"
version = "0.1.0"
edition = "2021"

[dependencies]
agent = { path = "../../crates/agent" }
bus = { path = "../../crates/bus" }
brainos-common = { path = "../brainos-common" }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
serde_json = "1.0"
