[package]
name = "llm-agent-demo"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bob"
path = "src/bin/bob.rs"

[[bin]]
name = "alice"
path = "src/bin/alice.rs"

[dependencies]
agent = { path = "../../crates/agent" }
bus = { path = "../../crates/bus" }
brainos-common = { path = "../brainos-common" }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
async-trait = "0.1"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
uuid = { version = "1.0", features = ["v4", "serde"] }
fastrand = { version = "2.0" }
tokio-stream = { workspace = true }
rkyv = { workspace = true }
zenoh = { workspace = true }
